# mcp-micropython

./: .gitignore  README.md  check_esp32.py  check_micropython.py  claude_desktop_config_example.json  design.md  dev_server.py  pyproject.toml
doc/: design.md  webrepl_design.md
src/mcp_esp32/: __init__.py  raw_repl.py  serial_manager.py  server.py
src/mcp_esp32/tools/: device.py  execution.py  filesystem.py
src/mcp_micropython/: device_test_cli.py  raw_repl.py  server.py  static_resources.py  transport.py
src/mcp_micropython/resources/: hardware_docs_policy.md  limitations.md  recipes.md  troubleshooting.md
src/mcp_micropython/tools/: device.py  execution.py  filesystem.py
tests/: test_device_test_cli.py  test_filesystem_tools.py  test_raw_repl.py
