[project]
name = "mcp-esp32"
version = "0.1.0"
description = "MCP bridge server for MicroPython on ESP32 via USB serial"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyserial>=3.5",
]

[project.scripts]
mcp-esp32 = "mcp_esp32.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_esp32"]

